<resources>
    <string name="app_name">Fiora</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_benchmark">Health Benchmark</string>
    <string name="healthdata">Health Data</string>
    <string name="activity">Activity</string>
    <string name="nutrition">Nutrition</string>
    <string name="mental">Mental</string>
    <string name="title_activity_profile_settings">Profile Settings</string>
    <string name="title_activity_questionnaire">Current Symptoms</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Profile</string>

    <string name="pref_title_demograhics">Demographics</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Name</string>
    <string name="pref_default_display_name">Olivia Smith</string>

    <string name="pref_title_height">Height</string>
    <integer name="pref_default_height">180</integer>

    <string name="pref_title_weight">Weight</string>
    <integer name="pref_default_weight">80</integer>


    <string name="pref_title_gen_health_profile">GenHealthProfile</string>
    <string-array name="pref_example_list_titles">
        <item>just</item>
        <item>any random</item>
        <item>content</item>
    </string-array>
    <string-array name="pref_gen_health_profile_values">
        <item>just</item>
        <item>any random</item>
        <item>content</item>
    </string-array>

    <string name="pref_title_sharing_option">Sharing Option</string>
    <string-array name="pref_list_sharing_option">
        <item>just</item>
        <item>any random</item>
        <item>content</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_apps">Apps</string>

    <string name="pref_title_sync_frequency">App Sync Frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">App Connection Settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_senses">Senses</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_senses_bluetooth_settings">Senses Bluetooth Settings</string>
    <string name="title_activity_advice">Advice Dashboard</string>
    <string name="title_activity_diary">Diary</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


    <string-array name="advice_entry_highlights">
        <item>
            Eat regularly
        </item>
        <item>
            Eat at least 5 portions of fruit and vegetables a day
        </item>
        <item>
            Eat some phytoestrogen rich foods
        </item>
    </string-array>

    <string-array name="advice_entries">
        <item>
            Eat regularly – skipping meals will make it difficult to achieve your nutritional
            requirements or maintain a healthy weight.
        </item>
        <item>
            Eat at least 5 portions of fruit and vegetables a day for cancer and heart disease
            protective antioxidants and include low glycaemic carbohydrates at each meal including
            oats, pulses, grainy breads, pasta and other wholegrains like barley, cous cous and
            bulgar wheat. Eating low GL will help with weight control and mood swings.
        </item>
        <item>
            Eat some phytoestrogen rich foods every day such as soya milk, yoghurts and desserts,
            pulses like chickpeas or butter beans, soya and linseed bread and 2-3 servings a day is
            a good amount to aim for and may help reduce flushing and help lower cholesterol.
        </item>
    </string-array>

    <string name="btn_questionaire_done">"Done"</string>
    <string name="title_activity_home">HomeActivity</string>


</resources>
