<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceScreen
        android:key="button_voicemail_setting_key"
        android:title="@string/pref_title_demograhics"
        android:persistent="false">

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@integer/pref_default_height"
            android:inputType="textCapWords"
            android:key="height"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_height" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@integer/pref_default_weight"
            android:inputType="textCapWords"
            android:key="weight"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_weight" />

    </PreferenceScreen>



    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_gen_health_profile_values"
        android:entryValues="@array/pref_gen_health_profile_values"
        android:key="example_list_gen_health_profile"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_gen_health_profile" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_list_sharing_option"
        android:entryValues="@array/pref_list_sharing_option"
        android:key="example_list_sharing_option"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sharing_option" />


</PreferenceScreen>
